- fixed "bug" in VCF handling.  Apparently, the rest of the world missed the   memo (from the VCF standards committee) that '.' is a legal floating point value.   This "value" is now converted to "NaN" to indicate the metric is missing.
- performance improvements as suggested by findbugs. (Probably no noticable
  effect)

- fixed Makefile bug (had previously renamed .sh to .command, and not updated
  makefile))